--- a/views/edit.pug
+++ b/views/edit.pug
@@ -6,6 +6,14 @@ block content
     img(src="https://res.cloudinary.com/dbmataac4/image/upload/f_auto,q_auto/subhashitaani/logo.png" width="243" height="57" alt="logo")          
   div(style="margin-top: 5px;")
     h1= title
+  ul(class='nav-links')    
+    a(href="./") Daily Subhashitam
+    a(href="./edit") Edit your Subhashitam
+    a(href="./generative") Subhashitam with AI
+  div(class="burger")
+    div(class="line")
+    div(class="line2")
+    div(class="line3")      
   hr
   div(class="container")
     div(class="row")
