--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,19 @@
 extends layout
 
 block content
+  script(src="https://media-editor.cloudinary.com/all.js")
   div(style="float:left;margin-top: 5px;margin-right: 100px")
     img(src="https://res.cloudinary.com/dbmataac4/image/upload/f_auto,q_auto/subhashitaani/logo.png" width="243" height="57" alt="logo")          
   div(style="margin-top: 5px;")
     h1= title
+  ul(class='nav-links')    
+    a(href="./") Daily Subhashitam
+    a(href="./edit") Edit your Subhashitam
+    a(href="./generative") Subhashitam with AI
+  div(class="burger")
+    div(class="line")
+    div(class="line2")
+    div(class="line3")      
   hr
   div(class="container")
     div(class="row")
