--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,7 @@ block content
     a(href="./") Daily Subhashitam
     a(href="./edit") Edit your Subhashitam
     a(href="./generative") Subhashitam with AI
+    a(href="./about") About & Contact Us
   div(class="burger")
     div(class="line")
     div(class="line2")
