corrected the generated AI image to be darker

--- a/views/generative.pug
+++ b/views/generative.pug
@@ -112,7 +112,7 @@ block content
                 return resp.json()
             })
             .then(data => {
-                imageUrl = data[0].url || 'sample'                
+                imageUrl = data[0].url || 'https://res.cloudinary.com/dbmataac4/image/upload/f_auto,q_auto/sample'                
                 img.src = imageUrl                
             })
             }
